header nav & home ihop.

--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,8 @@ input{
     margin-top: 20px;
     margin-right: 50px;
     font-size: 32px; 
-    font-family: 'Raleway';'
-    line-height: 10px;
+    font-family: 'Raleway';
+    
 }
 
 
